[package]
name = "crawler"
version = "0.1.0"
authors = ["Matt Howlett <matt.howlett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = "0.22.0"
clap = "2.33.0"
log = "0.4.8"
tokio = { version = "0.2", features = ["blocking", "macros", "rt-core", "time"] }
chrono = "0.4.0"
env_logger = "0.7.1"
futures = "0.3.0"
hyper = "0.13"
hyper-tls = "0.4.0"
